--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 /generated_cv
 /log/*
 
+
+# Secrets
+/data_folder/secrets.yaml
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
